# stonecuttersignal

./: .env.example  .gitignore  .replit  Procfile  README.md  app.py  compare_ab.py  providers_health.py  pyproject.toml  quick_check.py  replit.md  requirements.txt  run_sample.py  serve_dashboard.py  stonecutter.db  stonecutter.py  test_providers.py  test_quick_persist.py
attached_assets/: Pasted-Copy-paste-this-entire-block-into-Replit-s-AI-It-will-add-a-scoring-layer-on-top-of-arbitration-1755828727687_1755828727687.txt  Pasted-Great-Please-replace-the-entire-if-name-main-block-with-the-following-logic-if-n-1755370280455_1755370280455.txt  Pasted-You-are-helping-me-build-an-AI-powered-diagnostic-analysis-engine-called-Stonecutter-Signal-Stonec-1755368443054_1755368443055.txt  Pasted-You-are-my-repo-assistant-Do-NOT-delete-or-rename-existing-files-Make-additive-minimal-edits-only-1756006940769_1756006940769.txt  Pasted-You-are-my-repo-assistant-Do-NOT-delete-or-rename-existing-files-Only-add-or-minimally-extend-them-1755997127088_1755997127089.txt  Pasted-You-are-my-repo-assistant-Do-NOT-delete-or-rename-existing-files-Only-additive-or-minimal-edits-U-1756005120711_1756005120712.txt  Pasted-You-are-my-repo-assistant-Do-NOT-print-or-store-raw-keys-Make-minimal-additive-changes-with-marke-1756004031877_1756004031877.txt  Pasted-You-are-my-repo-assistant-Do-NOT-print-raw-keys-Additive-changes-only-with-markers-BEGIN-veri-1756004564239_1756004564239.txt  (+16 more)
scripts/: check_db.py  check_env_sdks.py  diag_all.py  diag_provider.py  list_perplexity_models.py  verify_keys.py
(+33 files in other folders)
