[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.99.9",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "anthropic>=0.32.0",
    "google-generativeai>=0.7.2",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pytrends>=4.9.2",
]
